--- a/.github/workflows/scope.yml
+++ b/.github/workflows/scope.yml
@@ -26,9 +26,9 @@ jobs:
         fi
         
     - name: Scope for Go
-      uses: undefinedlabs/scope-for-go-action@master
+      uses: undefinedlabs/scope-for-go-action@codepath
       with:
-        dsn: ${{secrets.SCOPE_DSN}} # required
+        dsn: ${{secrets.SCOPE_DSN}}
 
     - name: Upload Scope Logs
       if: always()
